--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "DataSource=app.db",
+    "SavingsGoalContext": "DataSource=app.db"
   },
   "Logging": {
     "LogLevel": {
