--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db",
-    "SavingsGoalContext": "DataSource=app.db"
+    "SavingsGoalContext": "DataSource=SavingsGoal.db"
   },
   "Logging": {
     "LogLevel": {
